--- a/style.css
+++ b/style.css
@@ -6,8 +6,6 @@
   --font-primary-color: #35c1b1;
 }
 body {
-  padding: 2px;
-  max-width: 80%;
   margin: 0;
   padding: 0;
   text-align: center;
@@ -19,15 +17,12 @@ div.body {
   text-align: center;
 }
 .container {
+  display: inline-block;
   text-align: center;
   overflow-x: hidden;
-
-  width: 100%;
-  height: 180%;
   padding: 2rem;
   background: white;
   border-radius: 20px;
-  margin-left: 5vw;
 }
 h1 {
   margin-top: 2rem;
@@ -60,7 +55,6 @@ input[type='number'] {
 .attribution {
   margin-top: 2rem;
   margin-bottom: 2rem;
-  margin-left: 20%;
 }
 span {
   color: var(--font-primary-color);
@@ -112,6 +106,9 @@ input {
   border: none;
   opacity: 0.3;
 }
+#reset:hover {
+  background-color: var(--font-primary-color);
+}
 input.button {
   color: white;
   background: var(--secondary-color);
@@ -137,7 +134,7 @@ input.button {
   max-width: 86px;
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 992px) {
   body {
     margin: 0;
     font-weight: bold;
@@ -147,12 +144,10 @@ input.button {
     font-family: 'Space Mono', monospace;
   }
   .body {
-    margin-left: 20vw;
     text-align: center;
   }
 
   .container {
-    margin-left: 20%;
     overflow-y: hidden;
     max-width: 750px;
     max-height: 55vh;
@@ -163,7 +158,6 @@ input.button {
   }
   h1 {
     margin-top: 3rem;
-    margin-left: 20%;
     margin-bottom: 2rem;
     font-size: 16px;
   }
@@ -197,7 +191,6 @@ input.button {
     border-style: none;
   }
   .attribution {
-    margin-left: 20%;
     font-size: 18px;
     margin-top: 3rem;
   }
